@@ -123,20 +123,6 @@
                     </archive>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
-                <configuration>
-                    <argLine>-Xms64m -Xmx512m -XX:MaxPermSize=128M
-                        -Dhazelcast.version.check.enabled=false
-                        -Dhazelcast.mancenter.enabled=false
-                        -Dhazelcast.logging.type=none
-                    </argLine>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
